--- a/package.json
+++ b/package.json
@@ -20,16 +20,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/csrf-protection": "^7.1.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/platform-socket.io": "^11.0.16",
+    "@nestjs/platform-socket.io": "^11.0.20",
     "@nestjs/swagger": "^11.1.2",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/websockets": "^11.0.16",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
+    "mongoose": "^8.13.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
