--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "lodash": "^4.17.21",
     "mongoose": "^8.13.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -50,6 +51,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
