--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-socket.io": "^11.0.20",
     "@nestjs/swagger": "^11.1.2",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.0.16",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
