--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.802.0",
     "@fastify/csrf-protection": "^7.1.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
@@ -34,6 +35,7 @@
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.0.16",
+    "@types/multer": "^1.4.12",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
