--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-s3": "^3.802.0",
     "@fastify/csrf-protection": "^7.1.0",
     "@nestjs/axios": "^4.0.0",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -39,11 +40,12 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.6.1",
+    "is-image": "^4.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.13.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "@nestjs/cli": "^11.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
